# tutor-ai

./: .env.example  .gitignore  README.md
python-agent/: README.md  docker-compose.yml  pyproject.toml  task_maistro.py
react-native-app/: package.json
