[project]
name = "python-agent"
version = "0.1.0"
description = ""
authors = [
    {name = "dobleuber",email = "wbertc@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "langgraph (>=0.2.69,<0.3.0)",
    "langchain-core (>=0.3.33,<0.4.0)",
    "langchain-community (>=0.3.16,<0.4.0)",
    "langchain-openai (>=0.3.3,<0.4.0)",
    "trustcall (>=0.0.34,<0.0.35)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
langgraph-cli = "^0.1.70"

